--- a/css/about/about-titulo.css
+++ b/css/about/about-titulo.css
@@ -1,40 +1,38 @@
-.title__bio {
+.about__title {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
     font-size: 1.375rem;
     line-height: 1.625rem;
     color: #464646;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-bottom: 0.5rem;
 }
 
 @media screen and (min-width:768px) {
-    .title__bio {
+    .about__title {
         font-family: 'Raleway';
         font-style: normal;
         font-weight: 700;
         font-size: 1.375rem;
         line-height: 1.625rem;
         color: #464646;
-        padding: 0.5rem 0 0 0;
-
+        padding-bottom: 0.5rem;
     }
     
 }
 
 @media screen and (min-width:1440px) {
-    .title__bio {
+    .about__title {
         font-family: 'Raleway';
         font-style: normal;
         font-weight: 700;
-        font-size: 3.25rem;
-        line-height: 3.8125rem;
+        font-size: 2rem;
+        line-height: 2.375rem;
         color: #464646;
-        padding-top: 3.8125rem;
-
-
+        padding-bottom: 0.5rem;
     }
     
 }
+
+
 
