--- a/css/menu/menu-list-item-contacto.css
+++ b/css/menu/menu-list-item-contacto.css
@@ -2,8 +2,8 @@
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 0.875rem;
+    line-height: 1rem;
 
     /* Preto/100% */
 
@@ -17,8 +17,8 @@
         font-family: 'Raleway';
 font-style: normal;
 font-weight: 700;
-font-size: 16px;
-line-height: 19px;
+font-size: 1rem;
+line-height: 1.1875rem;
 color: #464646;
     }
 }
