--- a/css/menu/menu.css
+++ b/css/menu/menu.css
@@ -1,20 +1,20 @@
 .menu {
     display: flex;
-    padding: 16px;
+    padding: 1rem;
     justify-content: space-between;
     /* align-items: center; */
 }
 
 @media screen and (min-width:768px) {
     .menu {
-        padding: 16px 32px;
+        padding: 1rem 2rem;
     }
     
 }
 
 @media  screen and (min-width: 1440px) {
     .menu {
-        padding: 32px 152px;
+        padding: 2rem 9.5rem;
     }
     
 }
