--- a/css/experience/experience-button-repo.css
+++ b/css/experience/experience-button-repo.css
@@ -2,11 +2,11 @@
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 0.875rem;
+    line-height: 1rem;
     color: #2A7AE4;
     border: 1px solid #2A7AE4;
-    padding: 12px 16px;
+    padding: 0.75rem 1rem;
 }
 
 @media screen and (min-width:1440px) {
@@ -14,8 +14,8 @@
         font-family: 'Raleway';
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
-        line-height: 19px;
+        font-size: 1rem;
+        line-height: 1.1875rem;
         color: #2A7AE4;
     }
 }
