--- a/css/experience/experience-info.css
+++ b/css/experience/experience-info.css
@@ -2,8 +2,8 @@
     .experience__info {
         display: flex;
         flex-direction: column;
-        padding-top: 140px;
-        padding-bottom: 140px;
+        padding-top: 8.75rem;
+        padding-bottom: 8.75rem;
         justify-content: center;
         
     } 
