--- a/css/experience/experience-text.css
+++ b/css/experience/experience-text.css
@@ -2,8 +2,8 @@
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 0.875rem;
+    line-height: 1rem;
     color: #464646;
     margin: 0.5rem 0 0.5rem 0;
 }
@@ -13,8 +13,8 @@
         font-family: 'Raleway';
         font-style: normal;
         font-weight: 500;
-        font-size: 16px;
-        line-height: 19px;
+        font-size: 1rem;
+        line-height: 1.1875rem;
         color: #464646;
     }
 }
