--- a/css/formcontact/formcontact-button.css
+++ b/css/formcontact/formcontact-button.css
@@ -1,23 +1,32 @@
-.experience__button--demo {
+.formcontact__button {
+    padding: 12px 16px;
+    width: 133px;
+    height: 40px;
+    background: #2A7AE4;
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 600;
     font-size: 0.875rem;
     line-height: 1rem;
     color: #FFFFFF;
-    padding: 0.75rem 1rem;
-    background: #2A7AE4;
     border: none;
+    margin-top: 2rem;
 }
 
 @media screen and (min-width:1440px) {
-    .experience__button--demo {
+    .formcontact__button {
+        padding: 1rem;
+        width: 148px;
+        height: 51px;
+        background: #2A7AE4;
         font-family: 'Raleway';
         font-style: normal;
         font-weight: 400;
         font-size: 1rem;
         line-height: 1.1875rem;
         color: #FFFFFF;
+        border: none;
+        margin-top: 2rem;
     }
     
 }
