--- a/css/formcontact/formcontact-title.css
+++ b/css/formcontact/formcontact-title.css
@@ -1,20 +1,21 @@
-.experience__title {
+.formcontact__title {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
-    font-size: 1rem;
-    line-height: 1.1875rem;
+    font-size: 1.375rem;
+    line-height: 1.625rem;
     color: #464646;
-    margin-top: 1rem;
+    padding-bottom: 0.5rem;
 }
 
 @media screen and (min-width: 1440px) {
-    .experience__title {
+    .formcontact__title {
         font-family: 'Raleway';
         font-style: normal;
         font-weight: 700;
-        font-size: 1.375rem;
-        line-height: 1.625rem;
+        font-size: 2rem;
+        line-height: 2.375rem;
         color: #464646;
     }
+    
 }
