--- a/css/academic/academic-courses.css
+++ b/css/academic/academic-courses.css
@@ -12,6 +12,15 @@
         justify-content: space-between;
     }    
 }
+/* @media screen and (min-width:1024px) {
+    .academic__courses {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 4.375rem 0 4.375rem;
+    }    
+} */
 
 @media screen and (min-width:1440px) {
     .academic__courses {
