--- a/css/formcontact/formcontact.css
+++ b/css/formcontact/formcontact.css
@@ -3,8 +3,14 @@
     background: #EAF2FD;
 }
 
+@media screen and (min-width:1024px) {
+    .formcontact {
+        padding: 6rem 4rem;
+    }
+}
+
 @media screen and (min-width:1440px) {
     .formcontact {
-        padding: 4rem 9.5rem;
+        padding: 6rem 9.5rem;
     }
 }
