--- a/css/hobbie/hobbies-line.css
+++ b/css/hobbie/hobbies-line.css
@@ -3,3 +3,17 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+@media screen and (min-width:1024px) {
+    .hobbies__line {
+        justify-content: flex-start;
+    }
+    
+}
+
+@media screen and (min-width:1440px) {
+    .hobbies__line {
+        justify-content: space-between;
+    }
+    
+}
