--- a/css/menu/menu-header.css
+++ b/css/menu/menu-header.css
@@ -1,4 +1,23 @@
 .menu__header {
     display: flex;
-    align-items: center; 
+    align-items: center;
+    padding-left: 1rem;
+}
+@media screen and (min-width:768px) {
+    .menu__header {
+        padding-left: 2rem;
+    }
+    
+}
+
+@media screen and (min-width: 1024px) {
+    .menu__header {
+        padding-left: 4rem;
+    }   
+}
+
+@media screen and (min-width: 1440px) {
+    .menu__header {
+        padding-left: 9.5rem;
+    }   
 }
