--- a/css/skill/skills.css
+++ b/css/skill/skills.css
@@ -11,8 +11,13 @@
     
 }
 
+@media screen and (min-width: 1024px) {
+    .skills {
+        padding:6rem 4rem;
+    }
+}
 @media screen and (min-width: 1440px) {
     .skills {
-        padding:2rem 9.5rem 88px 9.5rem;
+        padding:6rem 9.5rem;
     }
 }
