--- a/css/academic/academic-title.css
+++ b/css/academic/academic-title.css
@@ -11,6 +11,19 @@
 
 /* no cambia en modo tablet */
 
+@media screen and (min-width:1024px) {
+    .academic__title {
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 2rem;
+        line-height: 2.375rem;
+        text-align: center;
+        color: #464646;
+        margin-bottom: 2rem;
+    }
+    
+}
 @media screen and (min-width:1440px) {
     .academic__title {
         font-family: 'Raleway';
