--- a/css/formcontact/formcontact-img.css
+++ b/css/formcontact/formcontact-img.css
@@ -6,7 +6,8 @@
     .formcontact__img {
         display: block;
         float: left;
-        padding-right: 1rem;
+        margin-right: 1rem;
+        border-radius: 4px;
+        box-shadow: 5px 5px 5px rgb(0 0 0 / 40%);
     }
-    
 }
