--- a/css/formcontact/formcontact-input.css
+++ b/css/formcontact/formcontact-input.css
@@ -1,3 +1,124 @@
+.formcontact__grupo {
+    position: relative;
+    margin: 32px 0;
+    height: 56px;
+    background: #FFFFFF;
+    display: flex;
+    align-items: flex-end;
+    border-radius: 4px;
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 40%);
+    
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
+
+.formcontact__input{
+    
+    background: transparent; 
+    outline: none;
+    color: #464646;
+    padding: 10px 0.75rem;
+    display: block;
+    border: none;
+    width: 100%;
+    border-bottom: 2px solid #C8C8C8;
+    border-radius: 4px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    /* height: 56px; */
+
+    
+   
+
+}
+
+.formcontact__input:focus{
+    border-bottom: 2px solid #2A7AE4;
+    transition: all .5s ease;
+    /* color: #5e5d5d; */
+}
+ label{
+    color: #c6c6c6;
+    font-size: 16px;
+    position: absolute;
+    top: 20px;
+    left: 0.75rem;
+    pointer-events: none;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.25rem;
+
+    
+ }
+ 
+.formcontact__input:focus~label{
+    top: 0.25rem;
+    transition: all 0.5s;
+    color:#2A7AE4;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+
+    
+}
+.formcontact__input:valid~label {
+    color: #c6c6c6;
+    font-size: 16px;
+    top: 0.25rem;
+    left: 0.75rem;
+    pointer-events: none;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+
+    
+ }
+ .formcontact__input.full+label{
+    top: 0.25rem;
+    left: 0.75rem;
+
+    font-size: 0.8rem;
+    font-weight: 600;
+}
+
+
+/* .barra{
+    display: block;
+    position: relative;
+    width: 100%;
+    
+} */
+
+
+/* .barra::before{
+    content: "";
+    width: 0% ;
+    height: 2px;
+    bottom: 0;
+    position: absolute;
+    background: linear-gradient(45deg, #45C4B0,#9AEBA3);
+    transition: all .5s ease;
+} */
+
+
+/*  .formcontact__input:focus~.barra::before{
+    width: 100%;
+    
+    
+}  */
+
+/* 
 .formcontact__input {
     width: 100%;
     height: 56px;
@@ -6,16 +127,83 @@
     border-radius: 4px;
     border: none;
     border-bottom: 2px solid #ccc;
-}
-
-.formcontact__input::placeholder {
+    outline: none;
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 400;
     font-size: 1rem;
     line-height: 1.25rem;
-    display: flex;
-    align-items: center;
-    color: #A2A2A2;
-    padding-left: 0.75rem;
+    text-align: left;
 }
+ */
+
+/* .formcontact__input{
+    background: transparent;
+    outline: none;
+    color: #c6c6c6;
+    padding: 10px 10px 10px 5px;
+    display: block;
+    border: none;
+    width: 100%;
+    border-bottom: 1px solid #5e5d5d ;
+   
+
+} */
+/* 
+.formcontact__input:focus{
+    border-bottom: 2px solid #2A7AE4;
+    transition: all .5s ease;
+} */
+
+/* .formcontact__input:focus{
+    color: #5e5d5d;
+} */
+
+
+/* label{
+    color: #A2A2A2;
+    font-size: 16px;
+    position: absolute;
+    top: 15px;
+    left: 5px;
+    pointer-events: none;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    padding-left: 0.75rem;
+} */
+
+/* .formcontact__input label{
+    color: #c6c6c6;
+    font-size: 16px;
+    position: absolute;
+    top: 15px;
+    left: 5px;
+    pointer-events: none;
+
+    
+ } */
+
+/* .formcontact__input:focus~.label {
+
+    transition: all 0.5s;
+    font-size: 12px;
+    color:#2A7AE4;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    padding-left: 0.75rem;
+} */
+
+
+/* .formcontact__input input:focus~label{
+    top: -14px;
+    transition: all 0.5s;
+    font-size: 12px;
+    color: blue;
+
+    
+} */
