--- a/css/formcontact/formcontact-textarea.css
+++ b/css/formcontact/formcontact-textarea.css
@@ -1,14 +1,20 @@
 .formcontact__textarea {
-    width: 100%;
-    height: 133px;
-
-/* Preto/branco */
-
+    width: calc(100% - 1.50rem);
+    /* height: 133px; */
     background: #FFFFFF;
     border-radius: 4px;
     border: none;
     border-bottom: 2px solid #ccc;
-    margin-top: 2rem;
+    outline: none;
+    padding: 1rem 0.75rem;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    color: #464646;
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 40%);
+    
 }
 
 .formcontact__textarea::placeholder {
@@ -20,6 +26,12 @@
     display: flex;
     align-items: center;
     color: #A2A2A2;
-    padding-top: 1rem;
-    padding-left: 0.75rem;
+    
+    
+}
+
+.formcontact__textarea:focus{
+    border-bottom: 2px solid #2A7AE4;
+    transition: all .5s ease;
+    /* color: #5e5d5d; */
 }
