--- a/css/menu/menu-list-item-contacto.css
+++ b/css/menu/menu-list-item-contacto.css
@@ -4,10 +4,10 @@
     font-weight: 400;
     font-size: 0.875rem;
     line-height: 1rem;
-
     /* Preto/100% */
-
     color: #464646;
+    margin-right: 1rem;
+    
 
 
 }
@@ -15,13 +15,22 @@
 @media screen and (min-width:768px) {
     .menu__list__item__contato {
         font-family: 'Raleway';
-font-style: normal;
-font-weight: 700;
-font-size: 1rem;
-line-height: 1.1875rem;
-color: #464646;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 1rem;
+        line-height: 1.1875rem;
+        color: #464646;
+        margin-right: 2rem;
     }
 }
+
+@media screen and (min-width: 1024px) {
+    .menu__list__item__contato {
+        display: none;
+    }
+    
+}
+
 
 @media screen and (min-width: 1440px) {
     .menu__list__item__contato {
