--- a/css/menu/menu-list.css
+++ b/css/menu/menu-list.css
@@ -2,11 +2,22 @@
     display: none;
 }
 
+@media screen and (min-width:1024px) {
+    .menu__list {
+        display: block;
+        display: flex;
+        align-items: center;
+        padding-right: 4rem;
+        
+    }
+    
+}
 @media screen and (min-width:1440px) {
     .menu__list {
         display: block;
         display: flex;
         align-items: center;
+        padding-right: 9.5rem;
         
     }
     
