--- a/css/skill/skills-line.css
+++ b/css/skill/skills-line.css
@@ -3,3 +3,20 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+@media screen and (min-width:1024px) {
+    .skills__line {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        
+    }
+}
+
+@media screen and (min-width:1440px) {
+    .skills__line {
+        justify-content: space-between;
+        
+    }
+}
+    
