--- a/css/titulo/title-subsection.css
+++ b/css/titulo/title-subsection.css
@@ -21,6 +21,18 @@
     
 }
 
+@media screen and (min-width:1024px) {
+    .title__subsection {
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.1875rem;
+        line-height: 1.375rem;
+        color: #464646;
+        padding: 24px 0 24px 0;
+    }
+    
+}
 @media screen and (min-width:1440px) {
     .title__subsection {
         font-family: 'Raleway';
