se agregó una nueva validacion

--- a/css/formcontact/formcontact-input.css
+++ b/css/formcontact/formcontact-input.css
@@ -207,3 +207,12 @@
 
     
 } */
+
+
+.warnings {
+    width: 200px;
+    text-align: center;
+    margin: auto;
+    color: #b06ab3;
+    padding-top: 20px;
+}
