--- a/css/academic/academic-courses.css
+++ b/css/academic/academic-courses.css
@@ -8,19 +8,21 @@
     .academic__courses {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
     }    
 }
-/* @media screen and (min-width:1024px) {
+@media screen and (min-width:1024px) {
     .academic__courses {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
-        padding: 0 4.375rem 0 4.375rem;
+        
     }    
-} */
+}
 
 @media screen and (min-width:1440px) {
     .academic__courses {
