--- a/css/academic/academic-courses-item-img.css
+++ b/css/academic/academic-courses-item-img.css
@@ -7,36 +7,36 @@
     align-items: center;
 }
 
-.academic__courses__item__img--primera {
-    width: 84px;
-    height: 58px;
+.academic__courses__item__img img {
+    width: 100px;
+    /* height: 58px; */
     
 }
 
-.academic__courses__item__img--segunda {
-    width: 70px;
-    height: 48px;
-    
-}
 
-.academic__courses__item__img--tercera {
-    width: 102px;
-    height: 60px;
-    
-}
 
 @media screen and (min-width:768px) {
     .academic__courses__item__img {
         width: 224px;
         height: 118px;
     }
+    .academic__courses__item__img img {
+        width: 100px;
+        /* height: 58px; */
+        
+    }
     
 }
 
 @media screen and (min-width:1024px) {
     .academic__courses__item__img {
-        width: 100%;
-        height: 118px;
+        width: 368px;
+        height: 286px;
+    }
+    .academic__courses__item__img img {
+        width: 200px;
+        /* height: 58px; */
+        
     }
     
 }
@@ -47,24 +47,11 @@
         height: 286px;
     }
 
-    .academic__courses__item__img--primera {
-        width: 192px;
-        height: 130px;
+    .academic__courses__item__img img {
+        width: 250px;
         
-    }
-    
-    .academic__courses__item__img--segunda {
-        width: 190px;
-        height: 130px;
         
-    }
-    
-    .academic__courses__item__img--tercera {
-        width: 192px;
-        height: 130px;
-        
-    }
-
+    }   
     
 }
 
