--- a/css/academic/academic-courses.box.css
+++ b/css/academic/academic-courses.box.css
@@ -6,12 +6,54 @@
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
+    transition: 0.5s;
+}
+
+.academic__courses__box:hover {
+    transform: translateY(-2%);
+    -webkit-transform: translateY(-2%);
+    -moz-transform: translateY(-2%);
+    -ms-transform: translateY(-2%);
+    -o-transform: translateY(-2%);
 }
 
 @media screen and (min-width: 1024px) {
     .academic__courses__box {
-        width:100%;
-        margin: 0 1% 0 1%;
+        margin: 1rem 0 2rem 0;
+        box-shadow: 5px 5px 5px rgb(0 0 0 / 40%);
+        border-radius: 4px;
+        transition: 0.5s;
+        -webkit-transition: 0.5s;
+        -moz-transition: 0.5s;
+        -ms-transition: 0.5s;
+        -o-transition: 0.5s;
+    }
+
+    .academic__courses__box:hover {
+        transform: translateY(-2%);
+        -webkit-transform: translateY(-2%);
+        -moz-transform: translateY(-2%);
+        -ms-transform: translateY(-2%);
+        -o-transform: translateY(-2%);
+    }
+               ;
+}
+
+
+    
+
+
+@media screen and (min-width: 1440px) {
+    .academic__courses__box {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0px;
+        gap: 8px;
+
+        
+        
     }
     
 }
+
