--- a/css/experience/experience-button-demo.css
+++ b/css/experience/experience-button-demo.css
@@ -6,9 +6,25 @@
     line-height: 1rem;
     color: #FFFFFF;
     padding: 0.75rem 1rem;
-    background: #2A7AE4;
-    border: none;
-    box-shadow: 5px 5px 5px rgb(0 0 0 / 40%)
+    background: #c31e3d;
+    border-radius: 4px;
+    box-shadow: 5px 5px 5px rgb(0 0 0 / 40%);
+    cursor: pointer;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    border: 1px solid white;
+    transition: 0.5s;
+}
+
+.experience__button--demo a {
+    color: #FFFFFF;
+}
+
+.experience__button--demo:hover {
+    scale: 1.05;
+    text-transform: uppercase;
     
 }
 
