--- a/css/formcontact/formcontact-textarea.css
+++ b/css/formcontact/formcontact-textarea.css
@@ -31,7 +31,7 @@
 }
 
 .formcontact__textarea:focus{
-    border-bottom: 2px solid #2A7AE4;
+    border-bottom: 2px solid #c31e3d;
     transition: all .5s ease;
     /* color: #5e5d5d; */
 }
