--- a/css/menu/menu-list.css
+++ b/css/menu/menu-list.css
@@ -1,24 +1,100 @@
 .menu__list {
-    display: none;
+    font-family: 'Raleway', sans-serif;
+    /*height: 396px;*/
+    transition: transform .5s;
+    position: fixed;
+    width: 100%;
+    height: 90vh;
+    top: 70px;
+    max-width: 400px;
+    right: 0;
+    /*bottom: 0;*/
+    background-color: #464646;
+    overflow-y: auto;
+    display: grid;
+    grid-auto-rows: max-content;
+    transform: translateX(100%);
+    border-radius: 0 0 0 20px;
+    -webkit-border-radius: 0 0 0 20px;
+    -moz-border-radius: 0 0 0 20px;
+    -ms-border-radius: 0 0 0 20px;
+    -o-border-radius: 0 0 0 20px;
 }
+
+.menu__list--show {
+    transform: unset;
+    width: 100%;
+}
+
 
 @media screen and (min-width:1024px) {
     .menu__list {
-        display: block;
-        display: flex;
+        position: relative;
         align-items: center;
         padding-right: 4rem;
-        
+        height: 100%;
+        top: 0;
+        transition: transform .5s;
+        display: flex;
+        background-color: #F5F5F5;
+        transform: none;
+        max-width: 100%;
+        display: flex;
+
     }
-    
+
+    .menu__list a {
+        position: relative;
+        display: block;
+        overflow: hidden;
+      }
+
+      .menu__list a span {
+        transition: transform 0.2s ease-out;
+      }
+      
+      .menu__list a span:first-child {
+        display: inline-block;
+        padding: 10px;
+      }
+
+      .menu__list a span:last-child {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transform: translateY(-100%);
+      }
+      
+      .menu__list i {
+        font-size: 30px;
+      }
+      
+      .menu__list a:hover span:first-child {
+        transform: translateY(100%);
+      }
+
+      .menu__list a:hover span:last-child,
+        .menu__list[data-animation] a:hover span:last-child {
+        transform: none;
+        }
+
+
+
+
 }
+
 @media screen and (min-width:1440px) {
     .menu__list {
         display: block;
         display: flex;
         align-items: center;
         padding-right: 9.5rem;
-        
+
     }
-    
+
 }
