--- a/css/menu/menu.css
+++ b/css/menu/menu.css
@@ -1,13 +1,13 @@
 .menu {
     display: flex;
-    /* padding: 1rem; */
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0;
-    
+
 }
+
 .container {
-    background-color:#F5F5F5;
+    background-color: #F5F5F5;
     backdrop-filter: blur(5px);
     place-items: center;
     z-index: 2;
@@ -17,22 +17,87 @@
     border-bottom: 2px solid #464646;
 }
 
-@media screen and (min-width:768px) {
-    .menu {
-        /* padding: 1rem 2rem; */
-    }
-    
+/* menu hamburguesa */
+.menu__hamburguer {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    cursor: pointer;
 }
 
-@media  screen and (min-width: 1024px) {
-    .menu {
-        padding: 2rem 0rem; 
-    }
-    
+.menu__img {
+    display: block;
+    width: 36px;
+    background-color: #464646;
 }
-@media  screen and (min-width: 1440px) {
+
+.menu__img:hover {
+    background-color: #c31e3d;
+}
+
+.menu__link {
+    color: #fff;
+    text-decoration: none;
+    padding: 0 30px;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    padding: 25px 0;
+    padding-left: 30px;
+    height: auto;
+    /* flex-wrap: wrap-reverse; */
+}
+
+.menu__link > .menu__link--icon {
+    order: 0;
+}
+
+.menu__link--nombre {
+    order:1;
+}
+
+
+
+.menu__link:hover {
+    color: #c31e3d;
+}
+
+/* .menu__link i {
+    display: none;
+} */
+
+@media screen and (min-width:768px) {
     .menu {
-        padding: 2rem 0rem; 
+        padding: 1rem 0;
     }
-    
+
+}
+
+@media screen and (min-width: 1024px) {
+    .menu {
+        padding: 2rem 0rem;
+    }
+
+    .menu__hamburguer {
+        display: none;
+    }
+
+   .menu__link {
+        color: #464646;
+        text-decoration: none;
+        align-items: center;
+        padding: 0;
+        font-family: 'Raleway';
+        font-style: normal;
+        font: size 1rem;
+        line-height: 1.1875rem;
+    } 
+
+}
+
+@media screen and (min-width: 1440px) {
+    .menu {
+        padding: 2rem 0rem;
+    }
 }
