--- a/css/experience/experience-box.css
+++ b/css/experience/experience-box.css
@@ -1,10 +1,14 @@
 .experience__box {
-    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
 }
 
 @media screen and (min-width:1440px) {
     .experience__box {
+        display: block;
         align-items: center;
+        margin-top: 4rem;
         
         
     }
