--- a/css/experience/experience-info.css
+++ b/css/experience/experience-info.css
@@ -1,10 +1,12 @@
 @media screen and (min-width:1440px) {
     .experience__info {
+        height: 406px;
         display: flex;
         flex-direction: column;
-        padding-top: 8.75rem;
-        padding-bottom: 8.75rem;
+        /* padding-top: 8.75rem;
+        padding-bottom: 8.75rem; */
         justify-content: center;
+        align-items: flex-start;
         
     } 
 }
