--- a/css/experience/experience-text.css
+++ b/css/experience/experience-text.css
@@ -16,6 +16,7 @@
         font-size: 1rem;
         line-height: 1.1875rem;
         color: #464646;
+        margin: 0.5rem 0 0.5rem 0;
     }
 }
 
