--- a/css/formcontact/formcontact-textarea.css
+++ b/css/formcontact/formcontact-textarea.css
@@ -1,5 +1,5 @@
 .formcontact__textarea {
-    width: calc(100% - 1.50rem);
+    width: 100%;
     /* height: 133px; */
     background: #FFFFFF;
     border-radius: 4px;
