--- a/css/titulo/title-network-item.css
+++ b/css/titulo/title-network-item.css
@@ -6,30 +6,30 @@
     line-height: 16px;
     color: #464646;
     display: none;
-    
+
 }
 
-.title__network__item__icon i{
+.title__network__item__icon i {
 
     font-size: 3rem;
     color: #464646;
 
 }
 
-.title__network__item__icon:hover i{
+.title__network__item__icon:hover i {
 
     font-size: 3rem;
-    
+
 
 }
 
 
 .title__network__item__icon .fa-github {
-    color: rgb(159, 159, 164)
+    color: rgb(85, 85, 90)
 }
 
 
-.title__network__item__icon:hover .fa-github{
+.title__network__item__icon:hover .fa-github {
     color: black;
     transform: scale(1.1);
     transition: .5s;
@@ -40,7 +40,7 @@
 }
 
 .title__network__item__icon .fa-linkedin {
-    color: rgb(159, 159, 164)
+    color: rgb(85, 85, 90);
 }
 
 .title__network__item__icon:hover .fa-linkedin {
@@ -54,7 +54,7 @@
 }
 
 .title__network__item__icon .fa-instagram {
-    color: rgb(159, 159, 164);
+    color: rgb(85, 85, 90);
 }
 
 .title__network__item__icon:hover .fa-instagram {
@@ -65,10 +65,10 @@
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
-} 
+}
 
 .title__network__item__icon .fa-facebook {
-    color: rgb(159, 159, 164);
+    color: rgb(85, 85, 90);
 }
 
 .title__network__item__icon:hover .fa-facebook {
@@ -79,11 +79,11 @@
     -moz-transform: scale(1.1);
     -ms-transform: scale(1.1);
     -o-transform: scale(1.1);
-} 
- 
+}
+
 
 .title__network__item__icon .fa-file {
-    color: rgb(159, 159, 164)
+    color: rgb(85, 85, 90);
 }
 
 .title__network__item__icon:hover .fa-file {
@@ -117,85 +117,87 @@
         display: flex;
         align-items: center;
     }
-    .title__network__item i{
+
+    .title__network__item i {
 
         font-size: 1.5rem;
         color: #464646;
-    
+
     }
-    .title__network__item:hover i{
+
+    .title__network__item:hover i {
 
         font-size: 1.5rem;
         color: white;
-    
+
     }
 
 
     .button__linkedin {
         color: #0e76a8;
-      }
-      
-      .button__linkedin:hover {
+    }
+
+    .button__linkedin:hover {
         background: #0e76a8;
-        box-shadow: 0px 3px 10px rgba(0,0,0,.25);
-      }
+        box-shadow: 0px 3px 10px rgba(0, 0, 0, .25);
+    }
 
     .button__linkedin:hover a {
-    
+
         color: white !important;
         z-index: inherit;
-      }
+    }
 
-      .button__instagram {
+    .button__instagram {
         color: #d6249f;
-      }
-      
-      .button__instagram:hover {
-        background: #d6249f; 
-        background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
-        box-shadow: 0px 3px 10px rgba(0,0,0,.25);
-      }
+    }
 
-      .button__instagram:hover a {
-    
+    .button__instagram:hover {
+        background: #d6249f;
+        background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+        box-shadow: 0px 3px 10px rgba(0, 0, 0, .25);
+    }
+
+    .button__instagram:hover a {
+
         color: white !important;
         z-index: inherit;
-      }
+    }
 
-      .button__github {
-        color: #333!;
-      }
-      
-      .button__github:hover { 
+    .button__github {
+        color: #333 !;
+    }
+
+    .button__github:hover {
         background: #333;
-        box-shadow: 0px 3px 10px rgba(0,0,0,.25);
-      }
+        box-shadow: 0px 3px 10px rgba(0, 0, 0, .25);
+    }
 
-      .button__github:hover a {
-    
+    .button__github:hover a {
+
         color: white !important;
         z-index: inherit;
-      }
+    }
 
-      .button__cv {
+    .button__cv {
         color: #c31e3d;
-      }
-      
-      .button__cv:hover {
-        background: #c31e3d;
-        box-shadow: 0px 3px 10px rgba(0,0,0,.25);
-      }
+    }
 
-      .button__cv:hover a {
+    .button__cv:hover {
+        background: #c31e3d;
+        box-shadow: 0px 3px 10px rgba(0, 0, 0, .25);
+    }
+
+    .button__cv:hover a {
         color: white !important;
         z-index: inherit;
-      }  
+    }
 
     .title__network__item__icon i {
         display: none;
     }
 
-    
+
 }
 
 @media screen and (min-width:1024px) {
@@ -209,13 +211,14 @@
         margin-right: 2rem;
         align-items: center;
     }
+
     .title__network__item--arrow {
         width: 12px;
         height: 12px;
         padding-left: 4px;
         vertical-align: middle;
     }
-    
+
 }
 
 @media screen and (min-width:1440px) {
@@ -229,12 +232,12 @@
         margin-right: 2rem;
         align-items: center;
     }
+
     .title__network__item--arrow {
         width: 12px;
         height: 12px;
         padding-left: 4px;
         vertical-align: middle;
     }
-    
-}
 
+}
